--- a/spring3-testsuite/build.gradle
+++ b/spring3-testsuite/build.gradle
@@ -24,6 +24,7 @@ dependencies {
   compile libs.jackson
   compile libs.swagger
   compile libs.validation
+  compile 'commons-fileupload:commons-fileupload:1.3.1'
 
   compile 'javax.servlet:jstl:1.2'
 
@@ -60,5 +61,5 @@ tomcat {
   stopPort = 9091
 }
 
-tomcatRun.daemon = true
+tomcatRun.daemon = false
 
