--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,4 +1,5 @@
 ext {
+
   springVersion = '3.2.8.RELEASE'
   springSecurityVersion = '3.2.3.RELEASE'
   spockVersion = '0.7-groovy-2.0'
@@ -8,7 +9,7 @@ ext {
   jacksonVersion = "2.1.5"
   slf4jVersion = '1.7.5'
   tomcatVersion = '7.0.53'
-  swaggerSpringMvcVersion = '0.9.0-SNAPSHOT'
+  swaggerSpringMvcVersion = System.getenv('LATEST_SSMVC_VERSION') ?:'0.9.0-SNAPSHOT'
   swaggerUiVersion = '2.0.17'
   seleniumVersion = '2.41.0'
   chromeDriverVersion = '2.41.0'
@@ -18,10 +19,9 @@ ext {
   bootVersion = '1.1.3.RELEASE'
 }
 
+logger.quiet("--------- Building with swaggerSpringMvcVersion ${swaggerSpringMvcVersion}")
+
 ext.libs = [
-
-
-
 
         swagger       : [
                 "com.mangofactory:swagger-springmvc:$swaggerSpringMvcVersion"
