--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -8,8 +8,9 @@ ext {
   log4jVersion = "1.2.17"
   jacksonVersion = "2.1.5"
   slf4jVersion = '1.7.5'
+  logbackVersion = '1.1.2'
   tomcatVersion = '7.0.53'
-  swaggerSpringMvcVersion = System.getenv('LATEST_SSMVC_VERSION') ?:'0.9.0-SNAPSHOT'
+  swaggerSpringMvcVersion = System.getenv('LATEST_SSMVC_VERSION') ?:'0.9.1-SNAPSHOT'
   swaggerUiVersion = '2.0.17'
   seleniumVersion = '2.41.0'
   chromeDriverVersion = '2.41.0'
@@ -55,11 +56,9 @@ ext.libs = [
         validation    : ['org.hibernate:hibernate-validator:5.0.2.Final'],
 
         logging       : [
-                "org.slf4j:jcl-over-slf4j:${slf4jVersion}",
                 "org.slf4j:slf4j-api:${slf4jVersion}",
-                "org.slf4j:slf4j-log4j12:${slf4jVersion}",
-                "log4j:log4j:${log4jVersion}",
-                "ch.qos.logback:logback-classic:1.0.13"
+                "ch.qos.logback:logback-classic:$logbackVersion",
+                "ch.qos.logback:logback-core:$logbackVersion",
         ],
 
         functionalTest: [
