--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -10,7 +10,7 @@ ext {
   slf4jVersion = '1.7.5'
   logbackVersion = '1.1.2'
   tomcatVersion = '7.0.53'
-  swaggerSpringMvcVersion = System.getenv('LATEST_SSMVC_VERSION') ?:'0.9.1'
+  swaggerSpringMvcVersion = System.getenv('LATEST_SSMVC_VERSION') ?:'0.9.2-SNAPSHOT'
   swaggerUiVersion = '2.0.17'
   seleniumVersion = '2.41.0'
   chromeDriverVersion = '2.41.0'
