--- a/swagger-ui/build.gradle
+++ b/swagger-ui/build.gradle
@@ -51,6 +51,8 @@ task sdoc(type: Copy) {
 
   filter { String line ->
     line.replaceAll("\"http://petstore.swagger.wordnik.com/api/api-docs\"", replacePath)
+            .replaceAll('/\\*', '')
+            .replaceAll('\\*/', '')
   }
 
   rename('index.html', 'sdoc.jsp')
@@ -80,6 +82,11 @@ task sourceJar(type: Jar) {
   from sourceSets.main.allJava
 }
 
+task cleanup(type: Delete) {
+  delete "${buildDir}/${swaggerUiExplodedDir}"
+}
+
+clean.dependsOn(cleanup)
 compileJava.dependsOn(removeHtmlIndex)
 removeHtmlIndex.dependsOn(sdoc)
 sdoc.dependsOn(unzip)
